--- a/Personal-Project-Menagment/pom.xml
+++ b/Personal-Project-Menagment/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.Jakub686</groupId>
-	<artifactId>Personal-Project-Menagment</artifactId>
+	<artifactId>Personal-Project-Management</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Personal-Project-Menagment</name>
-	<description>Personal Project Menagment</description>
+	<name>Personal-Project-Management</name>
+	<description>Personal Project Management</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
